--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   path: ^1.8.1
   yaml: ^3.1.1
   percent_indicator: ^4.2.2
+  package_info_plus: ^1.4.3
 
 dev_dependencies:
   flutter_test:
