--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   yaml: ^3.1.1
   percent_indicator: ^4.2.2
   package_info_plus: ^1.4.3
+  
+  flutter_localizations:
+    sdk: flutter 
 
 dev_dependencies:
   flutter_test:
