--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,10 +14,12 @@ dependencies:
   get_storage: ^2.0.3
   url_launcher: ^6.1.4
   intl: ^0.17.0
-  path: ^1.8.1
-  yaml: ^3.1.1
   percent_indicator: ^4.2.2
   package_info_plus: ^1.4.3
+  just_the_tooltip: ^0.0.12
+  simple_animations: ^4.2.0
+  flutter_staggered_animations:
+    git: https://github.com/The-ring-io/flutter_staggered_animations.git
   
   flutter_localizations:
     sdk: flutter 
